# HiveMind

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  Makefile  PLAN.md  README.md  TESTING.md  USAGE.md  alembic.ini  docker-compose.yml  pyproject.toml
charts/hivemind/: Chart.yaml  values-local.yaml  values.yaml
charts/hivemind/templates/: _helpers.tpl  api-deployment.yaml  api-hpa.yaml  cleanup-cronjob.yaml  configmap.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  servicemonitor.yaml  worker-deployment.yaml  worker-keda.yaml
deploy/grafana/provisioning/dashboards/: dashboards.yml  hivemind.json
deploy/otel/: otel-collector.yaml
deploy/postgres/: init-readonly.sql  seed-demo.sql
deploy/prometheus/: prometheus.yml
hivemind/: __init__.py  bootstrap.py  config.py  main.py
hivemind/api/: auth.py  authz.py  deps.py  errors.py  sse.py
hivemind/api/middleware/: context_middleware.py  ratelimit.py
hivemind/api/routes/: agents.py  artifacts.py  catalog.py  chat.py  health.py  tasks.py
hivemind/api/schemas/: agents.py  chat.py  common.py
hivemind/core/: context.py  errors.py
hivemind/core/agents/: agent.py  builtin.py  factory.py  registry.py
hivemind/core/graph/: agent_runtime.py  builder.py  checkpointer.py  conditional.py  deps.py  events.py  runner.py  state.py  subagent_runner.py  supervisor.py
hivemind/core/llm/: _aggregate.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py  resilience.py
hivemind/core/skills/: injection.py  registry.py  skill.py
hivemind/core/tools/: base.py  code_tool.py  registry.py  sql_tool.py  subagent_tool.py  web_search_tool.py
hivemind/core/tools/sandbox/: __init__.py  base.py  docker_sandbox.py  grpc_sandbox.py  microsandbox_sandbox.py  subprocess_sandbox.py
hivemind/db/: models.py  repository.py  session.py
hivemind/db/migrations/: env.py
hivemind/db/migrations/versions/: 0001_baseline.py
hivemind/executor/: server.py
hivemind/executor/proto/: executor.proto  executor_pb2.py  executor_pb2_grpc.py
hivemind/observability/: logging.py  tracing.py
hivemind/services/: agent_service.py  artifact_store.py  conversation.py  mode_selector.py  scheduler.py
hivemind/workers/: broker.py  consumer.py  dispatcher.py  events.py
scripts/: mint_token.py
skills/: postgres-optimization.md
tests/: conftest.py  fakes.py
tests/integration/: test_api.py  test_api_unit.py
tests/unit/: test_agent_factory.py  test_agent_runtime.py  test_agent_service.py  test_artifacts.py  test_authz.py  test_context.py  test_graph.py  test_grpc_sandbox.py  test_misc.py  test_providers.py  test_pure_units.py  test_resilience_compaction.py  test_sandbox_microsandbox.py  test_services.py  test_skills.py  test_sql_guard.py  test_subagent.py  test_subprocess_sandbox.py  test_tool_registry.py  test_tools_and_supervisor.py
