[project]
name = "hivemind"
version = "0.1.0"
description = "Production-grade multi-agent AI orchestration on LangGraph."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HiveMind" }]

dependencies = [
    # web / api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    # auth
    "pyjwt[crypto]>=2.9",
    # orchestration
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-core>=0.3",
    # db
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    # broker / cache
    "aio-pika>=9.4",
    "redis>=5.2",
    # llm providers
    "anthropic>=0.40",
    "openai>=1.55",
    "httpx>=0.27",
    # tools
    "jsonschema>=4.23",
    "docker>=7.1",
    "microsandbox==0.5.6",
    "sqlglot>=25.0",
    # gRPC code-executor service (server + client backend)
    "grpcio>=1.68",
    # skills
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
    # observability
    "structlog>=24.4",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-api>=1.28",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28",
    "opentelemetry-exporter-prometheus>=0.49b0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
# microVM sandbox backend (SANDBOX_BACKEND=microsandbox). Linux-only (libkrun/KVM) and needs a
# running microsandbox server; install in the worker image, not on a macOS dev host.
microsandbox = ["microsandbox>=0.5"]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "anyio>=4.6",
    "asgi-lifespan>=2.1",
    "grpcio-tools>=1.68",  # regenerate executor stubs: `make proto`
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hivemind"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["hivemind", "tests"]
# Generated gRPC stubs are not hand-maintained; don't lint them.
extend-exclude = ["*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM", "RUF"]
ignore = [
    "B008",     # FastAPI Depends() in defaults is idiomatic
    "RUF012",   # tool/agent classes use declarative dict/list class attributes by design
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests requiring external services",
]

[tool.coverage.run]
source = ["hivemind/core", "hivemind/api"]
omit = ["*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
